add about section and make script.js instead of inline js

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
                 <a href="#">
                     <li>Home</li>
                 </a>
-                <a href="about.html">
+                <a href="#">
                     <li>About</li>
                 </a>
                 <a href="#">
@@ -36,47 +36,24 @@
     <div class="parallax"> 
     <canvas id="playArea"> </canvas>
 
-    <div class="title">
-        <h1>WIND IN <br> OUR <br> CHEST HAIR</h1>
+    <div class="text">
+        <p>
+          We are a group of weird people excited to build something new and amazing.<br><br>
+          The group name itself sounds weird and that defines who we are. <br><br>
+          Always ready to jump into some new learning and most important have fun in everything we do.
+
+        </p>
     </div>
     <div id="stars-container">
         <div id='stars'></div>
         <div id='stars2'></div>
         <div id='stars3'></div>
   </div>
-</div><!--
+</div>
   <div>
-    <h2>About</h2>
+
   </div>
 
-    <div class="load-wrapper">
-        <div class='body'>
-            <span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-            </span>
-            <div class='base'>
-                <span></span>
-                <div class='face'></div>
-            </div>
-        </div>
-        <div class='longfazers'>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-        <h1>Redirecting</h1>
-    </div>
-
-    <script>
-        $(window).on("load", function () {
-            $(".load-wrapper").fadeout("slow");
-        });
-    </script>
--->
 <script src="script.js"></script>
 </body>
 
