--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                 <a href="#">
                     <li>About</li>
                 </a>
-                <a href="#">
+                <a href="https://discord.gg/wm8WUUjhj8">
                     <li>Join Us</li>
                 </a>
                 <a href="#">
@@ -33,28 +33,28 @@
             </ul>
         </div>
     </div>
-    <div class="parallax"> 
-    <canvas id="playArea"> </canvas>
+    <div class="parallax">
+        <canvas id="playArea"> </canvas>
 
-    <div class="text">
-        <p>
-          We are a group of weird people excited to build something new and amazing.<br><br>
-          The group name itself sounds weird and that defines who we are. <br><br>
-          Always ready to jump into some new learning and most important have fun in everything we do.
+        <div class="text">
+            <p>
+                We are a group of weird people excited to build something new and amazing.<br><br>
+                The group name itself sounds weird and that defines who we are. <br><br>
+                Always ready to jump into some new learning and most important have fun in everything we do.
 
-        </p>
+            </p>
+        </div>
+        <div id="stars-container">
+            <div id='stars'></div>
+            <div id='stars2'></div>
+            <div id='stars3'></div>
+        </div>
     </div>
-    <div id="stars-container">
-        <div id='stars'></div>
-        <div id='stars2'></div>
-        <div id='stars3'></div>
-  </div>
-</div>
-  <div>
+    <div>
 
-  </div>
+    </div>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
