--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="about.html">
                     <li>About</li>
                 </a>
-                <a href="#">
+                <a href="https://discord.gg/wm8WUUjhj8">
                     <li>Join Us</li>
                 </a>
                 <a href="#">
@@ -33,18 +33,19 @@
             </ul>
         </div>
     </div>
-    <div class="parallax"> 
-    <canvas id="playArea"> </canvas>
+    <div class="parallax">
+        <canvas id="playArea"> </canvas>
 
-    <div class="title">
-        <h1>WIND IN <br> OUR <br> CHEST HAIR</h1>
+        <div class="title">
+            <h1>WIND IN <br> OUR <br> CHEST HAIR</h1>
+        </div>
+        <div id="stars-container">
+            <div id='stars'></div>
+            <div id='stars2'></div>
+            <div id='stars3'></div>
+        </div>
     </div>
-    <div id="stars-container">
-        <div id='stars'></div>
-        <div id='stars2'></div>
-        <div id='stars3'></div>
-  </div>
-</div><!--
+    <!--
   <div>
     <h2>About</h2>
   </div>
@@ -77,7 +78,7 @@
         });
     </script>
 -->
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
