member list updated

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WIOCH</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
@@ -17,7 +17,7 @@
         </div>
         <div class="nav-link">
             <ul>
-                <a href="#">
+                <a href="index.html">
                     <li>Home</li>
                 </a>
                 <a href="about.html">
@@ -26,9 +26,10 @@
                 <a href="https://discord.gg/wm8WUUjhj8">
                     <li>Join Us</li>
                 </a>
-                <a href="#">
+                <a href="members.html">
                     <li>Members</li>
                 </a>
+
 
             </ul>
         </div>
