--- a/members.html
+++ b/members.html
@@ -1,315 +1,319 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>WIOCH</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+	<style>
+		.card .card-columns {
+			display: relative;
+		}
+	</style>
 
 </head>
 
 <body>
-    <div class="nav-bar">
-        <div class="nav-logo">
-            <img src="logo.png">
-        </div>
-        <div class="nav-link">
-            <ul>
-                <a href="#">
-                    <li>Home</li>
-                </a>
-                <a href="#">
-                    <li>About</li>
-                </a>
-                <a href="#">
-                    <li>Join Us</li>
-                </a>
-                <a href="#">
-                    <li>Members</li>
-                </a>
+	<div class="nav-bar">
+		<div class="nav-logo">
+			<img src="logo.png">
+		</div>
+		<div class="nav-link">
+			<ul>
+				<a href="index.html">
+					<li>Home</li>
+				</a>
+				<a href="about.html">
+					<li>About</li>
+				</a>
+				<a href="https://discord.gg/wm8WUUjhj8">
+					<li>Join Us</li>
+				</a>
+				<a href="members.html">
+					<li>Members</li>
+				</a>
 
-            </ul>
-        </div>
-    </div>
-    <div class="parallax-card"> 
-    <canvas id="playArea"> </canvas>
-<div>
-    <div class="cards">
-       <div class="card-columns">
-		<div class="card text-white bg-dark mb-3 special-card">
-			
-			<div class="card-body text-center">
-				<h4 class="card-title">Panda_250</h4>
-			</div>
+			</ul>
 		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title">Harshita Jains</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title">Tyranno_2000</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title">whoismbmr</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title">Aditya Srinivas Menon</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title">Harry_0107</h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title">vish</h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title">nogi2k2</h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title">Bruh_Sound_Effect#3 </h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title">freak </h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			
-			<div class="card-body text-center">
-				<h4 class="card-title">Berniek</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title">Shweta Ranjan Anand</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title">Anupreet Singhn</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title">Gavin Johnsonn</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title">WindowsGaaia</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title">starkizard</h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title">faiz_hasan11s</h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title">Aditya</h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title">Pooja Upadhyaya</h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title">starwiz_7 </h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			
-			<div class="card-body text-center">
-				<h4 class="card-title">Patrick</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title">Anshu Kumar</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title">joshi08</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title">charles</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title">tastyapple</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title">Nikhil Menon</h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title">uhditya</h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title"> jashan_puri7</h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title">Kira </h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title">harini_t </h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			
-			<div class="card-body text-center">
-				<h4 class="card-title">Mouli Sankar</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title">AbdNM</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title"> lecorvus</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title">Ganesh Kumar</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title"> Flight64</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title"> pr0PM</h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title">SoloLevel</h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title"> Pragya Mittal</h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title">CruiseAlone </h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title"> ChandMJ </h4>
-
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			
-			<div class="card-body text-center">
-				<h4 class="card-title">Prakhar Saxena</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title"> Seshathri S</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title"> Priyanshu Gupta</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title"> Bruce Banner</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card">
-			<div class="card-body text-center">
-				<h4 class="card-title"> arimanyus</h4>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3 special-card" style="height:100%;">
-			<div class="card-body text-center">
-				<h4 class="card-title">zerobug-Mohit</h4>
-
-			</div>
-		
-		</div>
-		
 	</div>
-    </div>
-    <div id="stars-container">
-        <div id='stars'></div>
-        <div id='stars2'></div>
-        <div id='stars3'></div>
-  </div>
-</div></div>
-  <div>
+	<br />
+	<br />
+	<br />
+	<br />
+	<div>
 
-  </div>
 
-<script src="script.js"></script>
+		<div class="card-columns">
+			<div class="card text-white bg-dark mb-3 special-card">
+
+				<div class="card-body text-center">
+					<h4 class="card-title">Panda_250</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">Harshita Jains</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">Tyranno_2000</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">whoismbmr</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">Aditya Srinivas Menon</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">Harry_0107</h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">vish</h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">nogi2k2</h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">Bruh_Sound_Effect#3 </h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">freak </h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+
+				<div class="card-body text-center">
+					<h4 class="card-title">Berniek</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">Shweta Ranjan Anand</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">Anupreet Singhn</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">Gavin Johnsonn</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">WindowsGaaia</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">starkizard</h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">faiz_hasan11s</h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">Aditya</h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">Pooja Upadhyaya</h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">starwiz_7 </h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+
+				<div class="card-body text-center">
+					<h4 class="card-title">Patrick</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">Anshu Kumar</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">joshi08</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">charles</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">tastyapple</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">Nikhil Menon</h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">uhditya</h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title"> jashan_puri7</h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">Kira </h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">harini_t </h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+
+				<div class="card-body text-center">
+					<h4 class="card-title">Mouli Sankar</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">AbdNM</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title"> lecorvus</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">Ganesh Kumar</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title"> Flight64</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title"> pr0PM</h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">SoloLevel</h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title"> Pragya Mittal</h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">CruiseAlone </h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title"> ChandMJ </h4>
+
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+
+				<div class="card-body text-center">
+					<h4 class="card-title">Prakhar Saxena</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title"> Seshathri S</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title"> Priyanshu Gupta</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title"> Bruce Banner</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title"> arimanyus</h4>
+				</div>
+			</div>
+			<div class="card text-white bg-dark mb-3 special-card">
+				<div class="card-body text-center">
+					<h4 class="card-title">zerobug-Mohit</h4>
+
+
+
+				</div>
+			</div>
+
+		</div>
+	</div>
+	<div>
+
+	</div>
+
+	<script src="script.js"></script>
 </body>
 
 </html>
