--- a/about.html
+++ b/about.html
@@ -13,7 +13,9 @@
 <body>
     <div class="nav-bar">
         <div class="nav-logo">
-            <img src="logo.png">
+
+            <img src="logo.png" onclick="playAudio('wind.wav')">
+
         </div>
         <div class="nav-link">
             <ul>
