--- a/index.html
+++ b/index.html
@@ -13,26 +13,30 @@
 <body>
     <div class="nav-bar">
         <div class="nav-logo">
-            <img src="logo.png">
+
+            <img src="logo.png" onclick="playAudio('wind.wav')">
+
         </div>
-        <div class="nav-link">
-            <ul>
-                <a href="index.html">
-                    <li>Home</li>
-                </a>
-                <a href="about.html">
-                    <li>About</li>
-                </a>
-                <a href="https://discord.gg/wm8WUUjhj8">
-                    <li>Join Us</li>
-                </a>
-                <a href="members.html">
-                    <li>Members</li>
-                </a>
+        <img src="logo.png">
+    </div>
+    <div class="nav-link">
+        <ul>
+            <a href="index.html">
+                <li>Home</li>
+            </a>
+            <a href="about.html">
+                <li>About</li>
+            </a>
+            <a href="https://discord.gg/wm8WUUjhj8">
+                <li>Join Us</li>
+            </a>
+            <a href="members.html">
+                <li>Members</li>
+            </a>
 
 
-            </ul>
-        </div>
+        </ul>
+    </div>
     </div>
     <div class="parallax">
         <canvas id="playArea"> </canvas>
