--- a/members.html
+++ b/members.html
@@ -15,12 +15,20 @@
 		}
 	</style>
 
+	<script>
+		function playAudio(url) {
+			new Audio(url).play();
+		}
+	</script>
+
 </head>
 
 <body>
 	<div class="nav-bar">
 		<div class="nav-logo">
-			<img src="logo.png">
+
+			<img src="logo.png" onclick="playAudio('wind.wav')">
+
 		</div>
 		<div class="nav-link">
 			<ul>
