--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>WIOCH</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        function playAudio(url) {
+            new Audio(url).play();
+        }
+    </script>
 
 </head>
 
