--- a/about.html
+++ b/about.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+    <script>
+        function playAudio(url) {
+            new Audio(url).play();
+        }
+    </script>
+
 </head>
 
 <body>
