fartboard on the wae

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <a href="members.html">
                     <li>Members</li>
                 </a>
+                <a href="fartboard.html">
+                    <li> Windy Noises </li>
+                </a>
 
 
             </ul>
