sound page corrected

--- a/about.html
+++ b/about.html
@@ -37,7 +37,9 @@
                 <a href="members.html">
                     <li>Members</li>
                 </a>
-
+                <a href="windy.html">
+                    <li> Windy Noises </li>
+                </a>
 
             </ul>
         </div>
@@ -49,7 +51,7 @@
             <p>
                 We are a group of weird people excited to build something new and amazing.<br><br>
                 The group name itself sounds weird and that defines who we are. <br><br>
-                Always ready to jump into some new learning and most important have fun in everything we do.
+                Always ready to jump into some new learning and most important having fun in everything we do.
 
             </p>
         </div>
