--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="members.html">
                     <li>Members</li>
                 </a>
-                <a href="fartboard.html">
+                <a href="windy.html">
                     <li> Windy Noises </li>
                 </a>
 
