--- a/members.html
+++ b/members.html
@@ -21,6 +21,8 @@
 		}
 	</script>
 
+
+
 </head>
 
 <body>
@@ -44,7 +46,9 @@
 				<a href="members.html">
 					<li>Members</li>
 				</a>
-
+				<a href="windy.html">
+					<li> Windy Noises </li>
+				</a>
 			</ul>
 		</div>
 	</div>
@@ -60,256 +64,281 @@
 
 				<div class="card-body text-center">
 					<h4 class="card-title">Panda_250</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">Harshita Jains</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">Tyranno_2000</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">whoismbmr</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">Aditya Srinivas Menon</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">Harry_0107</h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">vish</h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">nogi2k2</h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">Bruh_Sound_Effect#3 </h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">freak </h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 
 				<div class="card-body text-center">
 					<h4 class="card-title">Berniek</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">Shweta Ranjan Anand</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">Anupreet Singhn</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">Gavin Johnsonn</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">WindowsGaaia</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">starkizard</h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">faiz_hasan11s</h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">Aditya</h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">Pooja Upadhyaya</h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">starwiz_7 </h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 
 				<div class="card-body text-center">
 					<h4 class="card-title">Patrick</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">Anshu Kumar</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">joshi08</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">charles</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">tastyapple</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">Nikhil Menon</h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">uhditya</h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title"> jashan_puri7</h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">Kira </h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">harini_t </h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 
 				<div class="card-body text-center">
 					<h4 class="card-title">Mouli Sankar</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">AbdNM</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title"> lecorvus</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">Ganesh Kumar</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title"> Flight64</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title"> pr0PM</h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">SoloLevel</h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title"> Pragya Mittal</h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">CruiseAlone </h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title"> ChandMJ </h4>
-
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 
 				<div class="card-body text-center">
 					<h4 class="card-title">Prakhar Saxena</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title"> Seshathri S</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title"> Priyanshu Gupta</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title"> Bruce Banner</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title"> arimanyus</h4>
+					<p></p>
 				</div>
 			</div>
 			<div class="card text-white bg-dark mb-3 special-card">
 				<div class="card-body text-center">
 					<h4 class="card-title">zerobug-Mohit</h4>
-
+					<p></p>
 
 
 				</div>
@@ -322,6 +351,7 @@
 	</div>
 
 	<script src="script.js"></script>
+	<script src="emoji.js"></script>
 </body>
 
 </html>
