--- a/windy.html
+++ b/windy.html
@@ -50,8 +50,8 @@
   </div>
 
   <div class="parallax">
-    <canvas id="playArea"> </canvas>
-
+    <canvas id="playArea">
+    </canvas>
     <div class="title">
       <div class="keys">
         <div data-key="65" class="key">
@@ -98,6 +98,7 @@
       <div id='stars3'></div>
     </div>
   </div>
+
 
 
   <audio data-key="65" src="sounds/1.mp3"></audio>
